feat: jersey image crud operations
